--- a/sigma.css
+++ b/sigma.css
@@ -8,31 +8,48 @@ header {
   top: 0;
   left: 0;
   right: 0;
+  height: 4rem;
+  z-index: 1000;
 }
-
+html i {
+  font-size: 3em;
+}
 header input[type="text"] {
   flex: 1;
   margin-right: 1rem;
 }
-
+#search-bar {
+  height: 75%;
+  width: 12rem;
+  border: none;
+  outline: none;
+  font-size: 1.5rem;
+}
 header i {
   cursor: pointer;
+}
+body {
+  background-color: #000000;
+  height: 100vh;
 }
 
 main {
   padding: 1rem;
+  margin-top: 4rem; /* to avoid overlap with header */
   background-color: #000000;
   height: 100vh;
 }
 
 nav {
+  height: 4rem;
   display: flex;
   position: fixed;
   bottom: 0;
   width: 100%;
   justify-content: space-around;
   padding: 1rem;
-  background-color: #777e85;
+  background-color: #777e85a6;
+  z-index: 999;
 }
 
 nav a {
@@ -47,4 +64,74 @@ nav a:hover {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+/*media queries*/
+/*laptop*/
+@media (max-width: 1366px) {
+  html {
+    font-size: 75%;
+  }
+  /*tablet*/
+}
+@media (max-width: 1024px) {
+  html {
+    font-size: 60%;
+  }
+
+  /*mobile*/
+}
+@media (max-width: 768px) {
+  html {
+    font-size: 55%;
+  }
+}
+
+/*inventory display*/
+.inventory-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  padding: 20px 0;
+}
+/*for the context menu positioning*/
+.inventory-item {
+  text-align: center;
+  transition: transform 0.2s ease-in-out;
+  position: relative; /*for the context menu positioning*/
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: wheat;
+  z-index: 1;
+  font-size: 2.1em;
+}
+.inventory-item:hover {
+  transform: translateY(-5px);
+}
+/*Right-Click Context Menu Styling*/
+.context-menu {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 5px 0;
+  z-index: 1000; /* Ensure that it is on the top of th eother elements */
+  min-width: 150px;
+}
+.context-menu button {
+  display: block;
+  width: 100%;
+  padding: 10px 15px;
+  border: none;
+  background: none;
+  text-align: left;
+  cursor: pointer;
+  font-size: 0.95em;
+  color: #333;
+}
+.context-menu button:hover {
+  background-color: #f0f0f0;
 }
