--- a/sigma.css
+++ b/sigma.css
@@ -15,12 +15,15 @@ html i {
   font-size: 3em;
 }
 header input[type="text"] {
-  flex: 1;
   margin-right: 1rem;
 }
+#search-bar:focus {
+  /* background-color: yellow; */
+  opacity: 1;
+}
 #search-bar {
-  height: 75%;
-  width: 12rem;
+  width: 20%;
+  opacity: 0.5;
   border: none;
   outline: none;
   font-size: 1.5rem;
@@ -91,6 +94,9 @@ body.no-scroll {
   .context-menu {
     transform: scale(2);
     transform-origin: top left;
+  }
+  #search-bar {
+    width: 25%;
   }
 }
 
