--- a/sigma.css
+++ b/sigma.css
@@ -35,7 +35,9 @@ body {
   background-color: #000000;
   height: 100vh;
 }
-
+#addmenu {
+  background-color: #ffffff;
+}
 main {
   padding: 1rem;
   margin-top: 4rem; /* to avoid overlap with header */
