--- a/sigma.css
+++ b/sigma.css
@@ -60,11 +60,9 @@ nav {
 nav a {
   text-decoration: none;
   color: #007bff;
+  padding: 5px;
 }
 
-nav a:hover {
-  text-decoration: underline;
-}
 * {
   margin: 0;
   padding: 0;
@@ -152,4 +150,20 @@ body.no-scroll {
 }
 .context-menu button:hover {
   background-color: #f0f0f0;
+}
+#modal-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1001;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+#addmenu {
+  background-color: white;
 }
