--- a/sigma.css
+++ b/sigma.css
@@ -118,7 +118,7 @@ nav a {
   align-items: center;
   position: fixed;
   left: 0;
-  right: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   z-index: 1001;
