--- a/sigma.css
+++ b/sigma.css
@@ -37,16 +37,18 @@ header input[type="text"] {
 
 /* --- main: the grid --- */
 main {
-  padding: 1rem;
+  padding: 96px 20px 120px;
   margin-top: 4rem; /* to avoid overlap with header */
   background-color: #000000;
+  height: 100vh;
 }
 /*inventory display*/
 .inventory-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 20px;
-  transition: all 220ms ease;
+  padding: 20px 0;
+  /* transition: all 220ms ease; */
 }
 /*for the context menu positioning*/
 .inventory-item {
@@ -56,20 +58,23 @@ main {
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  gap: 10px;
   align-items: center;
   color: wheat;
   z-index: 1;
   font-size: 2.1em;
+  justify-content: space-between;
+  /* gap: 10px;
+  padding: 12px;
+  overflow: visible; */
 }
 .inventory-item img {
   user-select: none;
 }
-.inventory-item.selected {
+/* .inventory-item.selected {
   box-shadow: 0 12px 30px rgba(14, 165, 233, 0.12);
   border: 1px solid rgba(14, 165, 233, 0.2);
   transform: translateY(-6px);
-}
+} */
 
 /* --- nav: home, add, delete menu --- */
 nav {
