--- a/sigma.css
+++ b/sigma.css
@@ -210,19 +210,27 @@ button.ghost {
   border: 1px solid #e6eef6;
   cursor: pointer;
 }
-.breadcrumb-link {
-  color: #fff;
+
+/* BREADCRUMBS */
+#breadcrumb {
+  display: flex;
+}
+.breadcrumb-item {
+  display: flex;
+  gap: 8px;
+  padding: 4px 12px;
+  border-radius: 6px;
   cursor: pointer;
-  text-decoration: none;
-  padding: 0 2px;
+  border: none;
+  background: none;
+  transition: all 0.2s;
 }
-.breadcrumb-link:hover {
-  text-decoration: underline;
+.breadcrumb-item.active {
+  background-color: blue;
+  color: white;
+  font-weight: 500;
 }
-.breadcrumb-current {
-  font-weight: bold;
-  color: yellow;
-}
+
 /* category */
 .catWrapper {
   position: relative;
